Fix import list NPE. Use usage count as size for datasets